<package>
  <name>moveit_python_tools</name>
  <version>0.9.11</version>
  <description>Python conversion code for MoveIt</description>

  <author email="isucan@google.com">Ioan Sucan</author>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <build_depend>boost</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
