set(MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE moveit_move_group_interface)
set(MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE moveit_planning_scene_interface)
set(MOVEIT_LIB_NAME_ROBOT_INTERFACE moveit_robot_interface)

add_library(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python src/wrap_python_move_group.cpp)
target_link_libraries(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python ${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE} ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES} moveit_python_tools)
add_dependencies(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python ${catkin_EXPORTED_TARGETS})
set_target_properties(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python PROPERTIES VERSION ${${PROJECT_NAME}_VERSION})
set_target_properties(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python PROPERTIES OUTPUT_NAME _moveit_move_group_interface PREFIX "")
set_target_properties(${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION})

add_library(${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python src/wrap_python_planning_scene_interface.cpp)
target_link_libraries(${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python ${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE} ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES} moveit_python_tools)
set_target_properties(${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python PROPERTIES VERSION ${${PROJECT_NAME}_VERSION})
set_target_properties(${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python PROPERTIES OUTPUT_NAME _moveit_planning_scene_interface PREFIX "")
set_target_properties(${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION})

add_library(${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python src/wrap_python_robot_interface.cpp)
target_link_libraries(${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES}
  moveit_common_planning_interface_objects moveit_python_tools)
set_target_properties(${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python PROPERTIES VERSION ${${PROJECT_NAME}_VERSION})
set_target_properties(${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python PROPERTIES OUTPUT_NAME _moveit_robot_interface PREFIX "")
set_target_properties(${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION})

install(
  TARGETS
    ${MOVEIT_LIB_NAME_MOVE_GROUP_INTERFACE}_python
    ${MOVEIT_LIB_NAME_PLANNING_SCENE_INTERFACE}_python
    ${MOVEIT_LIB_NAME_ROBOT_INTERFACE}_python
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
)
